attempting to fix background positioning on mobile. position set to % instead of vh

--- a/vuetodo/style.css
+++ b/vuetodo/style.css
@@ -6,7 +6,7 @@
 
 body {
     position: relative;
-    height: 100vh;
+    height: 100%;
     background-image: url("bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
